--- a/.tools/requirements/requirements_dev.txt
+++ b/.tools/requirements/requirements_dev.txt
@@ -1,23 +1,20 @@
-# Requirements for the dev environment.
-
+# Requirements for the dev environment
 # Install tests package so modules can be run in debugging
 -e tests/.
 # Introspection
 fawltydeps==0.13.3
 # Experiment
-ipykernel==6.27.1
-# ? https://github.com/ipython/ipython/issues/14255
-ipython==8.17.2
+ipykernel==6.29.0
 # Debug
 debugpy==1.8.0
 # For `pythonstartup.py`
 rich==13.7.0
 # Format
-sourcery-cli==1.14.0
+sourcery-cli==1.15.0
 # Profiling
 snakeviz==2.2.0
 # Pre-commit
-pre-commit==3.5.0
+pre-commit==3.6.0
 # For local publishing to PyPi with flit
 keyring==24.3.0
 
