--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,85 +30,136 @@ deps = ["pyproject.toml"]
 ipykernel = ["IPython"]
 
 [tool.pytest.ini_options]
-addopts = """\
-    --strict-config \
-    --strict-markers \
-    --color yes \
-    -p no:legacypaths \
-    -r a \
-    """
+addopts = '''
+    --strict-config
+    --strict-markers
+    --color yes
+    -p no:legacypaths
+    -r a
+'''
 cache_dir = ".cache/.pytest_cache"
 markers = "slow"
 testpaths = "tests"
 xfail_strict = true
 
+[tool.coverage.run]
+branch = true
+source = "copier_python"
+[tool.coverage.report]
+ignore_errors = true
+
 [tool.pyright]
-# Paths
-include = ["src", "tests", "docs"]
-# Stubs
+exclude = ["**/node_modules", "**/__pycache__", "**/.*", "submodules"]
 stubPath = "submodules/typings"
-# Type inference helps with untyped upstream but can be unpredictable
-useLibraryCodeForTypes = true
-# Sets most checks to "error". See overrides below
 typeCheckingMode = "strict"
-# These flags are "true" by default in strict mode
-strictListInference = true
-strictDictionaryInference = true
-strictSetInference = true
+# Default "true" in strict
 analyzeUnannotatedFunctions = true
 strictParameterNoneValue = true
 enableTypeIgnoreComments = true
-# Override these errors
+disableBytesTypePromotions = true
+strictListInference = true
+strictDictionaryInference = true
+strictSetInference = true
+# Default "false" in strict
+deprecateTypingAliases = false
+enableExperimentalFeatures = false
+# Default "warning" in strict
+reportMissingModuleSource = "warning"
+# Default "error" in strict
+reportMissingImports = "warning"
+reportUndefinedVariable = "warning"
+reportAssertAlwaysTrue = "warning"
+reportInvalidStringEscapeSequence = "warning"
+reportInvalidTypeVarUse = "warning"
+reportMissingTypeStubs = "none" # Overeager
+reportSelfClsParameterName = "warning"
+reportUnsupportedDunderAll = "warning"
+reportUnusedExpression = "none"                # Handled by Ruff
+reportWildcardImportFromLibrary = "warning"
+reportGeneralTypeIssues = "warning"
+reportOptionalSubscript = "warning"
+reportOptionalMemberAccess = "warning"
+reportOptionalCall = "warning"
+reportOptionalIterable = "warning"
+reportOptionalContextManager = "warning"
+reportOptionalOperand = "warning"
+reportTypedDictNotRequiredAccess = "warning"
+reportPrivateImportUsage = "warning"
+reportUnboundVariable = "warning"
+reportUnusedCoroutine = "none"                 # Handled by Ruff
+reportFunctionMemberAccess = "warning"
+reportIncompatibleMethodOverride = "warning"
+reportIncompatibleVariableOverride = "warning"
+reportOverlappingOverload = "warning"
 reportConstantRedefinition = "none"
+reportDeprecated = "warning"
+reportDuplicateImport = "warning"
+reportIncompleteStub = "warning"
+reportInconsistentConstructor = "warning"
+reportInvalidStubStatement = "warning"
+reportMatchNotExhaustive = "warning"
 reportMissingParameterType = "none"
-reportMissingTypeStubs = "none"
+reportMissingTypeArgument = "warning"
+reportPrivateUsage = "none"                    # Ruff checks this well enough
+reportTypeCommentUsage = "warning"
 reportUnknownArgumentType = "none"
 reportUnknownLambdaType = "none"
 reportUnknownMemberType = "none"
 reportUnknownParameterType = "none"
 reportUnknownVariableType = "none"
-reportUnusedClass = "none"
-reportUnusedCoroutine = "none"
-reportUnusedExpression = "none"
-reportUnusedFunction = "none"
-reportUnusedImport = "none"
-reportUnusedVariable = "none"
+reportUnnecessaryCast = "warning"
+reportUnnecessaryComparison = "warning"
+reportUnnecessaryContains = "warning"
+reportUnnecessaryIsInstance = "warning"
+reportUnusedClass = "none"                     # Handled by Ruff
+reportUnusedImport = "none"                    # Handled by Ruff
+reportUnusedFunction = "none"                  # Handled by Ruff
+reportUnusedVariable = "none"                  # Handled by Ruff
 reportUntypedBaseClass = "none"
-# Override these disabled diagnostics
-reportShadowedImports = "error"
-reportCallInDefaultInitializer = "error"
-reportPropertyTypeMismatch = "error"
-reportUninitializedInstanceVariable = "error"
-# These diagnostics are "none" by default in strict mode
+reportUntypedClassDecorator = "warning"
+reportUntypedFunctionDecorator = "none"        # Often out of our control
+reportUntypedNamedTuple = "warning"
+# Default "none" in strict
+reportCallInDefaultInitializer = "none"
+reportImplicitOverride = "none"
 reportImplicitStringConcatenation = "none"
+reportImportCycles = "none"
 reportMissingSuperCall = "none"
+reportPropertyTypeMismatch = "none"
+reportShadowedImports = "none"
+reportUninitializedInstanceVariable = "warning" # Ensure we define instance vars
 reportUnnecessaryTypeIgnoreComment = "none"
 reportUnusedCallResult = "none"
 
 [tool.ruff]
-include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]
-fix = true
 cache-dir = ".cache/.ruff_cache"
+extend-exclude = ["submodules"]
+extend-include = ["*.ipynb"]
+fix = true
+force-exclude = true
+show-fixes = true
+show-source = true
+preview = false
+unsafe-fixes = false
+fixable = ["ALL"]
 select = ["ALL"]
-src = ["src", "tests"]
-target-version = "py311"
-extend-exclude = ["submodules", ".github"]
-ignore = [
+extend-ignore = [
     "ANN",     # Don't require type annotations
     "ARG005",  # Allow unused lambda argument. For consistency across df pipelines.
     "C408",    # Allow dict calls
     "COM",     # Allow magic commas and magic missing commas
+    "CPY001",  # Don't check for copyright
     "D10",     # Missing docstrings
     "D20",     # Don't reformat docstrings in these ways
     "D213",    # Multi-line docstring summary should start at the second line
     "D402",    # False positives for parens in first line
+    "D412",    # Allow blanks below headers in Google-style docstrings
     "DTZ",     # Timezones are important, but only contextually necessary.
     "E501",    # Don't check line length. Black handles this.
     "EM",      # Don't check for exception message issues
     "ERA",     # False positives. Don't get rid of commented out code.
     "FBT",     # Allow boolean "traps"
     "FIX002",  # Allow TODOs
-    "F841",    # Don't check for or fix unused variables
     "FLY002",  # Allow different string representations
     "G0",      # Allow f-strings, etc. in Loguru logging
     "INP001",  # False positives. Checks for packages missing `__init__.py`
@@ -131,11 +182,7 @@ ignore = [
 ]
 
 [tool.ruff.format]
-preview = true
 skip-magic-trailing-comma = true
-
-[tool.ruff.isort]
-split-on-trailing-comma = false
 
 [tool.ruff.pydocstyle]
 convention = "google"
@@ -151,15 +198,10 @@ convention = "google"
     "E402", # Need to allow imports below patches in docs notebooks
 ]
 "tests/**" = [
-    "ARG001", # Allow unused arguments in tests
-    "S101",   # Allow assert in tests
-]
-"template/*.py" = [
-    "N999", # Invalid module names are okay, as some filenames are templated
+    "ARG001", # Allow unused arguments
+    "S101",   # Allow assert
+    "SIM300", # Allow constants (expectations) on the RHS
 ]
 
 [tool.ruff.flake8-bugbear]
 extend-immutable-calls = ["typer.Argument", "typer.Option"]
-
-[tool.ruff.pep8-naming]
-classmethod-decorators = ["pydantic.validator"]
