--- a/.tools/requirements/requirements.txt
+++ b/.tools/requirements/requirements.txt
@@ -1,1 +1,1 @@
-# Latest working requirements of your package, should be ahead of pyproject.toml.
+# Latest working requirements of your package, should be ahead of pyproject.toml
