--- a/.tools/requirements/requirements_ci.txt
+++ b/.tools/requirements/requirements_ci.txt
@@ -1,6 +1,7 @@
-# Requirements for dev environments.
-
+# Requirements for dev environments
 # Publishing
 flit==3.9.0
+# Annotate test failures in PRs
+pytest-github-actions-annotate-failures==0.2.0
 
 -r requirements_both.txt
