--- a/.tools/requirements/requirements_docs.txt
+++ b/.tools/requirements/requirements_docs.txt
@@ -1,6 +1,5 @@
-# Requirements for documentation.
-
+# Requirements for documentation
 myst-parser==2.0.0
 sphinx-autobuild==2021.03.14
-sphinx-book-theme==1.0.1
+sphinx-book-theme==1.1.0
 sphinx-design==0.5.0
