--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,7 +74,7 @@
   },
   "notebook.codeActionsOnSave": {
     "notebook.source.fixAll": "explicit",
-    "notebook.source.organizeImports": "explicit"
+    "source.organizeImports": "explicit"
   },
   //! Extensions
   //* GitHub Actions
