--- a/template/.gitignore
+++ b/template/.gitignore
@@ -1,6 +1,20 @@
+# Locally-compiled dependencies
+.comps
+# Ignore schema, which has absolute paths that will vary by system
+params_schema.json
+# Don't commit local DVC plots
+dvc_plots
+*.ipynb.*
+# Don't commit test plots
+tests/plots
+# Don't commit pytest-harvest temporary storage
+.xdist_harvested/
+
 # * -------------------------------------------------------------------------------- * #
 # * Template gitignore
 
+# Ignore `.ruff-cache` just in case, and to grey it out in the sidebar
+.ruff_cache
 # To allow for local variation in type checking without overriding CI
 pyrightconfig.json
 # To allow for local variation in test configuration without overriding CI
@@ -12,8 +26,8 @@ pytest.ini
 # Don't commit code workspace files, which might be symlinked here
 *.code-workspace
 # Avoid committing local docs builds for previewing
-_build
-_site
+_build/
+_site/
 # If using Google Cloud Platform Workload Identity Federation, avoid committing keys
 # Ignore generated credentials from google-github-actions/auth
 gha-creds-*.json
